2004-09-13  DJ Delorie  <dj@redhat.com>

	* lib/sim-defs.exp (run_sim_test): Add global_as_options,
	global_ld_options, and global_sim_options to all test cases, if
	defined.

2004-05-12  Ben Elliston  <bje@au.ibm.com>

	* lib/sim-defs.exp: Remove stray semicolons.

2004-03-01  Richard Sandiford  <rsandifo@redhat.com>

	* sim/frv/allinsn.exp (all_machs): Add fr405 and fr450.
	* sim/fr400/allinsn.exp (all_machs): Likewise.
	* sim/fr400/addss.cgs (mach): Change to "fr405 fr450".
	* sim/fr400/scutss.cgs (mach): Likewise.
	* sim/fr400/slass.cgs (mach): Likewise.
	* sim/fr400/smass.cgs (mach): Likewise.
	* sim/fr400/smsss.cgs (mach): Likewise.
	* sim/fr400/smu.cgs (mach): Likewise.
	* sim/fr400/subss.cgs (mach): Likewise.
	* sim/interrupts/fp_exception.cgs: Replace fmadds with .word.
	* sim/interrupts/fp_exception-fr550.cgs: Likewise.
	* sim/frv/mqlclrhs.cgs: New test.
	* sim/frv/mqlmths.cgs: New test.
	* sim/frv/mqsllhi.cgs: New test.
	* sim/frv/mqsrahi.cgs: New test.

2004-03-01  Richard Sandiford  <rsandifo@redhat.com>

	* sim/frv/fr400/scutss.cgs: Fix tests to account for rounding.
	Add some new ones.

2004-03-01  Richard Sandiford  <rsandifo@redhat.com>

	* sim/frv/{rstb,rsth,rst,rstd,rstq}.cgs: Delete.
	* sim/frv/{rstbf,rsthf,rstf,rstdf,rstqf}.cgs: Delete.

2004-01-26  Chris Demetriou  <cgd@broadcom.com>

	* sim/mips: New directory.  Tests for the MIPS simulator.

2004-01-23  Ben Elliston  <bje@wasabisystems.com>

	* lib/sim-defs.exp (run_sim_test): Delete the .o and .x files if a
	test passes.

2003-10-10  Dave Brolley  <brolley@redhat.com>

	* sim/frv/testutils.inc (or_gr_immed): New macro.
	* sim/frv/fp_exception-fr550.cgs: Write insns using
	unaligned registers into the program in order to
	cause the required exceptions.
	* sim/frv/fp_exception.cgs: Ditto.
	* sim/frv/regalign.cgs: Ditto.

2003-10-06  Dave Brolley  <brolley@redhat.com>

	* sim/frv/fr550: New subdirectory.
	* sim/frv/fr400/*.cgs: Add fr550 as appropriate.