@@ -109,12 +109,19 @@ proc sim_run { prog sim_opts prog_opts redir options } {
 	set sim "env $testcase_env $sim"
     }
 
-    send_log "$sim $always_opts $SIMFLAGS $sim_opts $prog $prog_opts\n"
+    if { [board_info target sim,protocol] == "sid" } {
+	set cmd ""
+	set sim_opts "$sim_opts -e \"set cpu-loader file [list ${prog}]\""
+    } else {
+	set cmd "$prog"
+    }
+
+    send_log "$sim $always_opts $SIMFLAGS $sim_opts $cmd $prog_opts\n"
 
     if { "$redir" == "" } {
-	remote_spawn host "$sim $always_opts $SIMFLAGS $sim_opts $prog $prog_opts"
+	remote_spawn host "$sim $always_opts $SIMFLAGS $sim_opts $cmd $prog_opts"
     } else {
-	remote_spawn host "$sim $always_opts $SIMFLAGS $sim_opts $prog $prog_opts $redir" writeonly
+	remote_spawn host "$sim $always_opts $SIMFLAGS $sim_opts $cmd $prog_opts $redir" writeonly
     }
     set result [remote_wait host $testcase_timeout]
 
